Bug 128944 - http://www.spiegel.de is not displayed properly by Konqueror
Summary: http://www.spiegel.de is not displayed properly by Konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 129053 129335 130223 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-06-10 13:46 UTC by Tobias Heinemann
Modified: 2006-07-03 23:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Heinemann 2006-06-10 13:46:17 UTC
Version:            (using KDE KDE 3.5.3)
Installed from:    Ubuntu Packages
Compiler:          gcc 4.0.3 
OS:                Linux

Linked articles on http://www.spiegel.de (for instance http://www.spiegel.de/sport/fussball/0,1518,420592,00.html) are not displayed properly in in Konqueror 3.5.3. This does work in 3.5.2.
Comment 1 Carsten Lohrke 2006-06-11 23:57:14 UTC
Can reproduce the issue. Only the flash advert is displayed. When I enable my filter rules, the advert gets filtered and I can see the article. So this bug seems to be related to bug 128566.
Comment 2 Hp News 2006-06-12 00:34:44 UTC
Hmm, are you sure it works with your KDE 3.5.2?

I've got KDE 3.5.2 here (debian packages) and I can confirm this bug: Page is only displayed after filtering the advert.
Comment 3 Tobias Heinemann 2006-06-12 00:43:18 UTC
I was only told that it works under KDE 3.5.3 -- apparently by someone who has enabled AdBlocK filters.
Comment 4 Tobias Heinemann 2006-06-12 00:44:51 UTC
Obviously, I meant to write "KDE 3.5.2" in the above comment.
Comment 5 Stefan Borggraefe 2006-06-12 22:09:25 UTC
*** Bug 129053 has been marked as a duplicate of this bug. ***
Comment 6 Tommi Tervo 2006-06-17 23:19:17 UTC
*** Bug 129335 has been marked as a duplicate of this bug. ***
Comment 7 Germain Garand 2006-06-19 01:21:57 UTC
SVN commit 552743 by ggarand:

for the sake of all things sacred, stop eating Coolo's football news :(

BUG: 128944
3.5.3 regression




 M  +3 -2      htmltokenizer.cpp  


--- branches/KDE/3.5/kdelibs/khtml/html/htmltokenizer.cpp #552742:552743
@@ -388,9 +388,10 @@
 
     // Scripts following a frameset element should not be executed or even loaded in the case of extern scripts.
     bool followingFrameset = (parser->doc()->body() && parser->doc()->body()->id() == ID_FRAMESET);
+    bool effectiveScript = !parser->skipMode() && !followingFrameset;
     bool deferredScript = false;
 
-    if ( !parser->skipMode() && !followingFrameset) {
+    if ( effectiveScript ) {
         CachedScript* cs = 0;
 
         // forget what we just got, load from src url instead
@@ -419,7 +420,7 @@
     script = false;
     scriptCodeSize = scriptCodeResync = 0;
 
-    if (parser->skipMode() || followingFrameset)
+    if ( !effectiveScript )
         return;
 
     if ( !m_executingScript && cachedScript.isEmpty() ) {
Comment 8 Tommi Tervo 2006-07-03 23:06:49 UTC
*** Bug 130223 has been marked as a duplicate of this bug. ***