for the sake of all things sacred, stop eating Coolo's football news :(

BUG: 128944
3.5.3 regression



svn path=/branches/KDE/3.5/kdelibs/; revision=552743